add field favorite category
